<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myPad++</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As</string>
    <string name="action_close">Close Tab</string>
    <string name="action_find">Find</string>
    <string name="action_goto">Go to Line</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="untitled">Untitled</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_failed">Failed to save</string>
    <string name="open_failed">Failed to open file</string>
    <string name="find_hint">Find text...</string>
    <string name="replace_hint">Replace with...</string>
    <string name="goto_hint">Line number</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="line_numbers">Line Numbers</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="font_size">Font Size</string>
</resources>
